Fixed some more problems with decorator and overflow

--- a/src/global.css
+++ b/src/global.css
@@ -15,7 +15,6 @@ body {
   margin: 0;
   background-color: #383b49;
   color: #ffffff;
-  overflow: hidden;
 }
 
 input,
